[package]
name = "generator"
version = "0.1.0"
authors = ["Seemann <mail@sannybuilder.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
convert_case = "0.4.0"
